--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "lshort-ukr.doc.tar.xz": c9785d6a99da39772948120a8e15977aa820aba9
-  "lshort-ukr.tar.xz": 079b548d7d112cae19256d7d5a2ad2706ddecae8
+  lshort-ukr.doc.r55643.tar.xz: ad8d40b6a2a41c16116228541d9b3e203772a1c9
+  lshort-ukr.r55643.tar.xz: 4ab5dbc8cbd8b52a07a23aafb36211a3a9f0c8a6
